...
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddPlayListViewController" customModule="MertcanYaman_HW4" customModuleProvider="target">
            <connections>
                <outlet property="backArrowImage" destination="v36-s4-S4R" id="LTR-SQ-oXa"/>
                <outlet property="myScrollView" destination="NLg-Oz-UeK" id="9nb-6p-6oo"/>
                <outlet property="playListTextField" destination="GMf-CH-ocX" id="CbM-3u-nB0"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                <outlet property="viewHeightConstraint" destination="ytb-Of-q6I" id="ueF-zO-EHx"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
...
                                            <rect key="frame" x="8" y="100" width="374" height="40"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="40" id="Hcl-0n-Swa"/>
                                            </constraints>
                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <state key="normal" title="Button"/>
                                            <buttonConfiguration key="configuration" style="gray" title="Save"/>
                                            <connections>
                                                <action selector="saveBtnClicked:" destination="-1" eventType="touchUpInside" id="NO7-c9-O9o"/>
                                            </connections>
                                        </button>
                                    </subviews>
                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
