...
                                            <constraints>
                                                <constraint firstAttribute="height" constant="36" id="6nZ-7N-j9u"/>
                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="132" id="cM4-4Q-GmJ"/>
                                            </constraints>
                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <state key="normal" title="Button"/>
                                            <buttonConfiguration key="configuration" style="filled" image="plus" catalog="system" title="Add Play List" cornerStyle="capsule">
                                                <fontDescription key="titleFontDescription" type="system" pointSize="14"/>
                                                <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            </buttonConfiguration>
                                            <connections>
                                                <action selector="addBtnClicked:" destination="-1" eventType="touchUpInside" id="JdK-Ob-Zbf"/>
...
